--- a/docker/mapstore.conf
+++ b/docker/mapstore.conf
@@ -42,8 +42,11 @@ server {
 
     location / {
             deny all;
-            return 301 /mapstore;
+            return 301 $scheme://$http_host/mapstore/;
     }
+    # location / {
+    #     index index.htm index.html;
+    # }
 
     location /mapstore {
         proxy_pass         http://mapstore:8080/mapstore;
